--- a/django_admin_bootstrapped/bootstrap3/templates/admin/base.html
+++ b/django_admin_bootstrapped/bootstrap3/templates/admin/base.html
@@ -25,6 +25,7 @@
     //]]>
     </script>
     <script src="{% static "admin/js/jquery-1.9.1.min.js" %}"></script>
+    <script src="{% static "admin/js/jquery-migrate-1.2.1.min.js" %}"></script>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
 
     {% block extrahead %}{% endblock %}
