--- a/django_admin_bootstrapped/bootstrap3/templates/admin/change_list.html
+++ b/django_admin_bootstrapped/bootstrap3/templates/admin/change_list.html
@@ -56,9 +56,6 @@
         </li>
         {% endif %}
         {% endblock %}
-        {% comment %} {% if action_form and actions_on_top and cl.full_result_count %}
-            {% admin_actions %}
-        {% endif %}{% endcomment %}
     </ul>
 
     {% if cl.has_filters %}
@@ -93,6 +90,10 @@
     {% render_with_template_if_exist cl.opts.app_label|lower|add:"/admin_app_"|add:app_name|add:"_description.html" "" %}
 {% endwith %}
 
+{% if action_form and actions_on_top and cl.full_result_count %}
+<div class='pull-right'>{% admin_actions %}</div>
+{% endif %}
+
 <div id="content-main">
     <div class="module{% if cl.has_filters %} filtered{% endif %}" id="_changelist">
         {% block date_hierarchy %}
@@ -112,7 +113,7 @@
 <div class="navbar navbar-default">
     <div class="navbar-inner">
         <div class="navbar-form pull-left">
-            {% if action_form and cl.full_result_count %}
+            {% if action_form and actions_on_bottom and cl.full_result_count %}
                 {% admin_actions %}
             {% endif %}
         </div>
